assets added & jumping between characters pages functionality added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/scripts/lightning.js"></script>
+    <script type="module" src="src/scripts/lightning.jsx"></script>
   </body>
 </html>
