--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/rick-and-morty/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rick and Morty</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/assets/index.c8cb5cf9.js"></script>
-    <link rel="stylesheet" href="/assets/index.c427e632.css">
+    <script type="module" crossorigin src="/rick-and-morty/assets/index.c8cb5cf9.js"></script>
+    <link rel="stylesheet" href="/rick-and-morty/assets/index.c427e632.css">
   </head>
   <body>
     <div id="root"></div>
