--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/rick&morty.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rick and Morty</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,5 +16,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="src/scripts/lightning.jsx"></script>
+    <script type="module" src="src/scripts/drag-drop-animation.js"></script>
   </body>
 </html>
