--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="src/scripts/lightning.jsx"></script>
+    <script type="module" src="src/scripts/animations.jsx"></script>
   </body>
 </html>
