--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="src/scripts/lightning.jsx"></script>
-    <script type="module" src="src/scripts/animations.jsx"></script>
+    <script type="module" src="src/scripts/portal-gun-animation.jsx"></script>
   </body>
 </html>
