--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="src/scripts/lightning.jsx"></script>
-    <script type="module" src="src/scripts/portal-gun-animation.jsx"></script>
+    <script type="module" src="/src/scripts/lightning.jsx"></script>
+    <script type="module" src="/src/scripts/portal-gun-animation.jsx"></script>
   </body>
 </html>
