--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/src/scripts/lightning.jsx"></script>
     <script type="module" src="/src/scripts/portal-gun-animation.jsx"></script>
+    <script type="module" src="/src/scripts/meeseeks-animation.jsx"></script>
   </body>
 </html>
