--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script type="module" src="/src/scripts/lightning.jsx"></script>
     <script type="module" src="/src/scripts/portal-gun-animation.jsx"></script>
     <script type="module" src="/src/scripts/meeseeks-animation.jsx"></script>
+    <script type="module" src="/src/scripts/pickle-animation.jsx"></script>
   </body>
 </html>
